tests/grammars/y.output
   0  $accept : module $end

   1  module : module_element
   2         | module module_element

   3  module_element : import_directive
   4                 | var_definition
   5                 | function_definition

   6  import_directive : IMPORT STRING SCOLON

   7  var_definition : NUM COLON SYMBOL ASSIGN NUMBER SCOLON
   8                 | STRG COLON SYMBOL ASSIGN STRING SCOLON
   9                 | BOOL COLON SYMBOL ASSIGN TRUE SCOLON
  10                 | BOOL COLON SYMBOL ASSIGN FALSE SCOLON

  11  function_definition : SYMBOL function_def_parameters statement_group

  12  function_def_parameters : OPAREN fd_parameter_list CPAREN OPAREN fd_parameter_list CPAREN

  13  fd_parameter :
  14               | NUM COLON SYMBOL
  15               | STRG COLON SYMBOL
  16               | BOOL COLON SYMBOL

  17  fd_parameter_list : fd_parameter
  18                    | fd_parameter COMMA fd_parameter_list

  19  statement_group : OCURLY statement_list CCURLY

  20  statement_list : statement
  21                 | statement statement_list

  22  statement : var_definition
  23            | var_assignment
  24            | function_call
  25            | if_statement
  26            | while_statement
  27            | for_statement
  28            | switch_statement
  29            | RETURN SCOLON
  30            | statement_group

  31  var_assignment : SYMBOL ASSIGN expression SCOLON

  32  function_call : SYMBOL function_call_parameters SCOLON

  33  function_call_parameters : OPAREN fc_parameter_list CPAREN OPAREN fc_parameter_list CPAREN

  34  fc_parameter_list :
  35                    | fc_parameter
  36                    | fc_parameter COMMA fc_parameter_list

  37  fc_parameter : SYMBOL
  38               | TRUE
  39               | FALSE
  40               | arith_expression
  41               | string_expression
  42               | boolean_expression

  43  expression : boolean_expression
  44             | arith_expression
  45             | string_expression

  46  string_expression : STRING
  47                    | STRING PLUS string_element_list

  48  string_element_list : string_element
  49                      | string_element PLUS string_element_list

  50  string_element : STRING
  51                 | SYMBOL
  52                 | NUMBER
  53                 | TRUE
  54                 | FALSE
  55                 | boolean_expression
  56                 | arith_expression

  57  boolean_expression :
  58                     | TRUE
  59                     | FALSE
  60                     | boolean_function OPAREN boolean_factor COMMA boolean_factor CPAREN
  61                     | NOT OPAREN boolean_factor CPAREN

  62  boolean_factor : STRING
  63                 | SYMBOL
  64                 | boolean_expression

  65  boolean_function : EQ
  66                   | NEQ
  67                   | MORE
  68                   | LESS
  69                   | OR
  70                   | AND

  71  arith_expression : arith_expression PLUS arith_term
  72                   | arith_expression MINUS arith_term
  73                   | arith_term

  74  arith_term : arith_term MULT arith_factor
  75             | arith_term DIV arith_factor
  76             | arith_term MODULO arith_factor
  77             | arith_factor

  78  arith_factor : MINUS arith_factor
  79               | OPAREN arith_expression CPAREN
  80               | NUMBER
  81               | SYMBOL

  82  if_statement : IF OPAREN boolean_expression CPAREN statement_group else_clause_list
  83               | IF OPAREN boolean_expression CPAREN statement_group

  84  else_clause_list : else_clause
  85                   | else_clause else_clause_list

  86  else_clause : ELSE OPAREN boolean_expression CPAREN statement_group

  87  loop_statement_group : OCURLY loop_statement_list CCURLY

  88  loop_statement_list : loop_statement
  89                      | loop_statement loop_statement_list

  90  loop_statement : statement
  91                 | CONT SCOLON
  92                 | BREAK SCOLON

  93  while_statement : WHILE OPAREN boolean_expression CPAREN loop_statement_group

  94  for_statement : FOR OPAREN var_assignment SCOLON boolean_expression SCOLON arith_expression CPAREN loop_statement_group

  95  switch_statement : SWITCH OPAREN SYMBOL CPAREN OCURLY case_clause_list CCURLY
  96                   | SWITCH OPAREN SYMBOL CPAREN OCURLY case_clause_list CCURLY else_clause

  97  case_clause_list : case_clause
  98                   | case_clause case_clause_list

  99  case_clause : CASE OPAREN SYMBOL CPAREN statement_group
 100              | CASE OPAREN NUMBER CPAREN statement_group
 101              | CASE OPAREN STRING CPAREN statement_group
 102              | CASE OPAREN TRUE CPAREN statement_group
 103              | CASE OPAREN FALSE CPAREN statement_group

state 0
	$accept : . module $end  (0)

	NUM  shift 1
	STRG  shift 2
	BOOL  shift 3
	IMPORT  shift 4
	SYMBOL  shift 5
	.  error

	module  goto 6
	module_element  goto 7
	import_directive  goto 8
	var_definition  goto 9
	function_definition  goto 10


state 1
	var_definition : NUM . COLON SYMBOL ASSIGN NUMBER SCOLON  (7)

	COLON  shift 11
	.  error


state 2
	var_definition : STRG . COLON SYMBOL ASSIGN STRING SCOLON  (8)

	COLON  shift 12
	.  error


state 3
	var_definition : BOOL . COLON SYMBOL ASSIGN TRUE SCOLON  (9)
	var_definition : BOOL . COLON SYMBOL ASSIGN FALSE SCOLON  (10)

	COLON  shift 13
	.  error


state 4
	import_directive : IMPORT . STRING SCOLON  (6)

	STRING  shift 14
	.  error


state 5
	function_definition : SYMBOL . function_def_parameters statement_group  (11)

	OPAREN  shift 15
	.  error

	function_def_parameters  goto 16


state 6
	$accept : module . $end  (0)
	module : module . module_element  (2)

	$end  accept
	NUM  shift 1
	STRG  shift 2
	BOOL  shift 3
	IMPORT  shift 4
	SYMBOL  shift 5
	.  error

	module_element  goto 17
	import_directive  goto 8
	var_definition  goto 9
	function_definition  goto 10


state 7
	module : module_element .  (1)

	.  reduce 1


state 8
	module_element : import_directive .  (3)

	.  reduce 3


state 9
	module_element : var_definition .  (4)

	.  reduce 4


state 10
	module_element : function_definition .  (5)

	.  reduce 5


state 11
	var_definition : NUM COLON . SYMBOL ASSIGN NUMBER SCOLON  (7)

	SYMBOL  shift 18
	.  error


state 12
	var_definition : STRG COLON . SYMBOL ASSIGN STRING SCOLON  (8)

	SYMBOL  shift 19
	.  error


state 13
	var_definition : BOOL COLON . SYMBOL ASSIGN TRUE SCOLON  (9)
	var_definition : BOOL COLON . SYMBOL ASSIGN FALSE SCOLON  (10)

	SYMBOL  shift 20
	.  error


state 14
	import_directive : IMPORT STRING . SCOLON  (6)

	SCOLON  shift 21
	.  error


state 15
	function_def_parameters : OPAREN . fd_parameter_list CPAREN OPAREN fd_parameter_list CPAREN  (12)
	fd_parameter : .  (13)

	NUM  shift 22
	STRG  shift 23
	BOOL  shift 24
	CPAREN  reduce 13
	COMMA  reduce 13

	fd_parameter_list  goto 25
	fd_parameter  goto 26


state 16
	function_definition : SYMBOL function_def_parameters . statement_group  (11)

	OCURLY  shift 27
	.  error

	statement_group  goto 28


state 17
	module : module module_element .  (2)

	.  reduce 2


state 18
	var_definition : NUM COLON SYMBOL . ASSIGN NUMBER SCOLON  (7)

	ASSIGN  shift 29
	.  error


state 19
	var_definition : STRG COLON SYMBOL . ASSIGN STRING SCOLON  (8)

	ASSIGN  shift 30
	.  error


state 20
	var_definition : BOOL COLON SYMBOL . ASSIGN TRUE SCOLON  (9)
	var_definition : BOOL COLON SYMBOL . ASSIGN FALSE SCOLON  (10)

	ASSIGN  shift 31
	.  error


state 21
	import_directive : IMPORT STRING SCOLON .  (6)

	.  reduce 6


state 22
	fd_parameter : NUM . COLON SYMBOL  (14)

	COLON  shift 32
	.  error


state 23
	fd_parameter : STRG . COLON SYMBOL  (15)

	COLON  shift 33
	.  error


state 24
	fd_parameter : BOOL . COLON SYMBOL  (16)

	COLON  shift 34
	.  error


state 25
	function_def_parameters : OPAREN fd_parameter_list . CPAREN OPAREN fd_parameter_list CPAREN  (12)

	CPAREN  shift 35
	.  error


state 26
	fd_parameter_list : fd_parameter .  (17)
	fd_parameter_list : fd_parameter . COMMA fd_parameter_list  (18)

	COMMA  shift 36
	CPAREN  reduce 17


state 27
	statement_group : OCURLY . statement_list CCURLY  (19)

	NUM  shift 1
	STRG  shift 2
	BOOL  shift 3
	RETURN  shift 37
	IF  shift 38
	WHILE  shift 39
	FOR  shift 40
	SWITCH  shift 41
	OCURLY  shift 27
	SYMBOL  shift 42
	.  error

	var_definition  goto 43
	statement_group  goto 44
	statement_list  goto 45
	statement  goto 46
	var_assignment  goto 47
	function_call  goto 48
	if_statement  goto 49
	while_statement  goto 50
	for_statement  goto 51
	switch_statement  goto 52


state 28
	function_definition : SYMBOL function_def_parameters statement_group .  (11)

	.  reduce 11


state 29
	var_definition : NUM COLON SYMBOL ASSIGN . NUMBER SCOLON  (7)

	NUMBER  shift 53
	.  error


state 30
	var_definition : STRG COLON SYMBOL ASSIGN . STRING SCOLON  (8)

	STRING  shift 54
	.  error


state 31
	var_definition : BOOL COLON SYMBOL ASSIGN . TRUE SCOLON  (9)
	var_definition : BOOL COLON SYMBOL ASSIGN . FALSE SCOLON  (10)

	TRUE  shift 55
	FALSE  shift 56
	.  error


state 32
	fd_parameter : NUM COLON . SYMBOL  (14)

	SYMBOL  shift 57
	.  error


state 33
	fd_parameter : STRG COLON . SYMBOL  (15)

	SYMBOL  shift 58
	.  error


state 34
	fd_parameter : BOOL COLON . SYMBOL  (16)

	SYMBOL  shift 59
	.  error


state 35
	function_def_parameters : OPAREN fd_parameter_list CPAREN . OPAREN fd_parameter_list CPAREN  (12)

	OPAREN  shift 60
	.  error


state 36
	fd_parameter_list : fd_parameter COMMA . fd_parameter_list  (18)
	fd_parameter : .  (13)

	NUM  shift 22
	STRG  shift 23
	BOOL  shift 24
	CPAREN  reduce 13
	COMMA  reduce 13

	fd_parameter_list  goto 61
	fd_parameter  goto 26


state 37
	statement : RETURN . SCOLON  (29)

	SCOLON  shift 62
	.  error


state 38
	if_statement : IF . OPAREN boolean_expression CPAREN statement_group else_clause_list  (82)
	if_statement : IF . OPAREN boolean_expression CPAREN statement_group  (83)

	OPAREN  shift 63
	.  error


state 39
	while_statement : WHILE . OPAREN boolean_expression CPAREN loop_statement_group  (93)

	OPAREN  shift 64
	.  error


state 40
	for_statement : FOR . OPAREN var_assignment SCOLON boolean_expression SCOLON arith_expression CPAREN loop_statement_group  (94)

	OPAREN  shift 65
	.  error


state 41
	switch_statement : SWITCH . OPAREN SYMBOL CPAREN OCURLY case_clause_list CCURLY  (95)
	switch_statement : SWITCH . OPAREN SYMBOL CPAREN OCURLY case_clause_list CCURLY else_clause  (96)

	OPAREN  shift 66
	.  error


state 42
	var_assignment : SYMBOL . ASSIGN expression SCOLON  (31)
	function_call : SYMBOL . function_call_parameters SCOLON  (32)

	OPAREN  shift 67
	ASSIGN  shift 68
	.  error

	function_call_parameters  goto 69


state 43
	statement : var_definition .  (22)

	.  reduce 22


state 44
	statement : statement_group .  (30)

	.  reduce 30


state 45
	statement_group : OCURLY statement_list . CCURLY  (19)

	CCURLY  shift 70
	.  error


state 46
	statement_list : statement .  (20)
	statement_list : statement . statement_list  (21)

	NUM  shift 1
	STRG  shift 2
	BOOL  shift 3
	RETURN  shift 37
	IF  shift 38
	WHILE  shift 39
	FOR  shift 40
	SWITCH  shift 41
	OCURLY  shift 27
	SYMBOL  shift 42
	CCURLY  reduce 20

	var_definition  goto 43
	statement_group  goto 44
	statement_list  goto 71
	statement  goto 46
	var_assignment  goto 47
	function_call  goto 48
	if_statement  goto 49
	while_statement  goto 50
	for_statement  goto 51
	switch_statement  goto 52


state 47
	statement : var_assignment .  (23)

	.  reduce 23


state 48
	statement : function_call .  (24)

	.  reduce 24


state 49
	statement : if_statement .  (25)

	.  reduce 25


state 50
	statement : while_statement .  (26)

	.  reduce 26


state 51
	statement : for_statement .  (27)

	.  reduce 27


state 52
	statement : switch_statement .  (28)

	.  reduce 28


state 53
	var_definition : NUM COLON SYMBOL ASSIGN NUMBER . SCOLON  (7)

	SCOLON  shift 72
	.  error


state 54
	var_definition : STRG COLON SYMBOL ASSIGN STRING . SCOLON  (8)

	SCOLON  shift 73
	.  error


state 55
	var_definition : BOOL COLON SYMBOL ASSIGN TRUE . SCOLON  (9)

	SCOLON  shift 74
	.  error


state 56
	var_definition : BOOL COLON SYMBOL ASSIGN FALSE . SCOLON  (10)

	SCOLON  shift 75
	.  error


state 57
	fd_parameter : NUM COLON SYMBOL .  (14)

	.  reduce 14


state 58
	fd_parameter : STRG COLON SYMBOL .  (15)

	.  reduce 15


state 59
	fd_parameter : BOOL COLON SYMBOL .  (16)

	.  reduce 16


state 60
	function_def_parameters : OPAREN fd_parameter_list CPAREN OPAREN . fd_parameter_list CPAREN  (12)
	fd_parameter : .  (13)

	NUM  shift 22
	STRG  shift 23
	BOOL  shift 24
	CPAREN  reduce 13
	COMMA  reduce 13

	fd_parameter_list  goto 76
	fd_parameter  goto 26


state 61
	fd_parameter_list : fd_parameter COMMA fd_parameter_list .  (18)

	.  reduce 18


state 62
	statement : RETURN SCOLON .  (29)

	.  reduce 29


state 63
	if_statement : IF OPAREN . boolean_expression CPAREN statement_group else_clause_list  (82)
	if_statement : IF OPAREN . boolean_expression CPAREN statement_group  (83)
	boolean_expression : .  (57)

	OR  shift 77
	AND  shift 78
	NOT  shift 79
	EQ  shift 80
	NEQ  shift 81
	MORE  shift 82
	LESS  shift 83
	TRUE  shift 84
	FALSE  shift 85
	CPAREN  reduce 57

	boolean_expression  goto 86
	boolean_function  goto 87


state 64
	while_statement : WHILE OPAREN . boolean_expression CPAREN loop_statement_group  (93)
	boolean_expression : .  (57)

	OR  shift 77
	AND  shift 78
	NOT  shift 79
	EQ  shift 80
	NEQ  shift 81
	MORE  shift 82
	LESS  shift 83
	TRUE  shift 84
	FALSE  shift 85
	CPAREN  reduce 57

	boolean_expression  goto 88
	boolean_function  goto 87


state 65
	for_statement : FOR OPAREN . var_assignment SCOLON boolean_expression SCOLON arith_expression CPAREN loop_statement_group  (94)

	SYMBOL  shift 89
	.  error

	var_assignment  goto 90


state 66
	switch_statement : SWITCH OPAREN . SYMBOL CPAREN OCURLY case_clause_list CCURLY  (95)
	switch_statement : SWITCH OPAREN . SYMBOL CPAREN OCURLY case_clause_list CCURLY else_clause  (96)

	SYMBOL  shift 91
	.  error


67: reduce/reduce conflict (reduce 34, reduce 57) on CPAREN
state 67
	function_call_parameters : OPAREN . fc_parameter_list CPAREN OPAREN fc_parameter_list CPAREN  (33)
	fc_parameter_list : .  (34)
	boolean_expression : .  (57)

	OR  shift 77
	AND  shift 78
	NOT  shift 79
	EQ  shift 80
	NEQ  shift 81
	MORE  shift 82
	LESS  shift 83
	TRUE  shift 92
	FALSE  shift 93
	OPAREN  shift 94
	MINUS  shift 95
	SYMBOL  shift 96
	NUMBER  shift 97
	STRING  shift 98
	CPAREN  [trial] reduce 34
	CPAREN  [trial] reduce 57
	COMMA  reduce 57

	fc_parameter_list  goto 99
	fc_parameter  goto 100
	arith_expression  goto 101
	string_expression  goto 102
	boolean_expression  goto 103
	boolean_function  goto 87
	arith_term  goto 104
	arith_factor  goto 105


state 68
	var_assignment : SYMBOL ASSIGN . expression SCOLON  (31)
	boolean_expression : .  (57)

	OR  shift 77
	AND  shift 78
	NOT  shift 79
	EQ  shift 80
	NEQ  shift 81
	MORE  shift 82
	LESS  shift 83
	TRUE  shift 84
	FALSE  shift 85
	OPAREN  shift 94
	MINUS  shift 95
	SYMBOL  shift 106
	NUMBER  shift 97
	STRING  shift 98
	SCOLON  reduce 57

	expression  goto 107
	arith_expression  goto 108
	string_expression  goto 109
	boolean_expression  goto 110
	boolean_function  goto 87
	arith_term  goto 104
	arith_factor  goto 105


state 69
	function_call : SYMBOL function_call_parameters . SCOLON  (32)

	SCOLON  shift 111
	.  error


state 70
	statement_group : OCURLY statement_list CCURLY .  (19)

	.  reduce 19


state 71
	statement_list : statement statement_list .  (21)

	.  reduce 21


state 72
	var_definition : NUM COLON SYMBOL ASSIGN NUMBER SCOLON .  (7)

	.  reduce 7


state 73
	var_definition : STRG COLON SYMBOL ASSIGN STRING SCOLON .  (8)

	.  reduce 8


state 74
	var_definition : BOOL COLON SYMBOL ASSIGN TRUE SCOLON .  (9)

	.  reduce 9


state 75
	var_definition : BOOL COLON SYMBOL ASSIGN FALSE SCOLON .  (10)

	.  reduce 10


state 76
	function_def_parameters : OPAREN fd_parameter_list CPAREN OPAREN fd_parameter_list . CPAREN  (12)

	CPAREN  shift 112
	.  error


state 77
	boolean_function : OR .  (69)

	.  reduce 69


state 78
	boolean_function : AND .  (70)

	.  reduce 70


state 79
	boolean_expression : NOT . OPAREN boolean_factor CPAREN  (61)

	OPAREN  shift 113
	.  error


state 80
	boolean_function : EQ .  (65)

	.  reduce 65


state 81
	boolean_function : NEQ .  (66)

	.  reduce 66


state 82
	boolean_function : MORE .  (67)

	.  reduce 67


state 83
	boolean_function : LESS .  (68)

	.  reduce 68


state 84
	boolean_expression : TRUE .  (58)

	.  reduce 58


state 85
	boolean_expression : FALSE .  (59)

	.  reduce 59


state 86
	if_statement : IF OPAREN boolean_expression . CPAREN statement_group else_clause_list  (82)
	if_statement : IF OPAREN boolean_expression . CPAREN statement_group  (83)

	CPAREN  shift 114
	.  error


state 87
	boolean_expression : boolean_function . OPAREN boolean_factor COMMA boolean_factor CPAREN  (60)

	OPAREN  shift 115
	.  error


state 88
	while_statement : WHILE OPAREN boolean_expression . CPAREN loop_statement_group  (93)

	CPAREN  shift 116
	.  error


state 89
	var_assignment : SYMBOL . ASSIGN expression SCOLON  (31)

	ASSIGN  shift 68
	.  error


state 90
	for_statement : FOR OPAREN var_assignment . SCOLON boolean_expression SCOLON arith_expression CPAREN loop_statement_group  (94)

	SCOLON  shift 117
	.  error


state 91
	switch_statement : SWITCH OPAREN SYMBOL . CPAREN OCURLY case_clause_list CCURLY  (95)
	switch_statement : SWITCH OPAREN SYMBOL . CPAREN OCURLY case_clause_list CCURLY else_clause  (96)

	CPAREN  shift 118
	.  error


92: reduce/reduce conflict (reduce 38, reduce 58) on CPAREN
92: reduce/reduce conflict (reduce 38, reduce 58) on COMMA
state 92
	fc_parameter : TRUE .  (38)
	boolean_expression : TRUE .  (58)

	CPAREN  [trial] reduce 38
	CPAREN  [trial] reduce 58
	COMMA  [trial] reduce 38
	COMMA  [trial] reduce 58


93: reduce/reduce conflict (reduce 39, reduce 59) on CPAREN
93: reduce/reduce conflict (reduce 39, reduce 59) on COMMA
state 93
	fc_parameter : FALSE .  (39)
	boolean_expression : FALSE .  (59)

	CPAREN  [trial] reduce 39
	CPAREN  [trial] reduce 59
	COMMA  [trial] reduce 39
	COMMA  [trial] reduce 59


state 94
	arith_factor : OPAREN . arith_expression CPAREN  (79)

	OPAREN  shift 94
	MINUS  shift 95
	SYMBOL  shift 106
	NUMBER  shift 97
	.  error

	arith_expression  goto 119
	arith_term  goto 104
	arith_factor  goto 105


state 95
	arith_factor : MINUS . arith_factor  (78)

	OPAREN  shift 94
	MINUS  shift 95
	SYMBOL  shift 106
	NUMBER  shift 97
	.  error

	arith_factor  goto 120


96: reduce/reduce conflict (reduce 37, reduce 81) on CPAREN
96: reduce/reduce conflict (reduce 37, reduce 81) on COMMA
state 96
	fc_parameter : SYMBOL .  (37)
	arith_factor : SYMBOL .  (81)

	CPAREN  [trial] reduce 37
	CPAREN  [trial] reduce 81
	COMMA  [trial] reduce 37
	COMMA  [trial] reduce 81
	PLUS  reduce 81
	MINUS  reduce 81
	MULT  reduce 81
	DIV  reduce 81
	MODULO  reduce 81


state 97
	arith_factor : NUMBER .  (80)

	.  reduce 80


state 98
	string_expression : STRING .  (46)
	string_expression : STRING . PLUS string_element_list  (47)

	PLUS  shift 121
	CPAREN  reduce 46
	COMMA  reduce 46
	SCOLON  reduce 46


state 99
	function_call_parameters : OPAREN fc_parameter_list . CPAREN OPAREN fc_parameter_list CPAREN  (33)

	CPAREN  shift 122
	.  error


state 100
	fc_parameter_list : fc_parameter .  (35)
	fc_parameter_list : fc_parameter . COMMA fc_parameter_list  (36)

	COMMA  shift 123
	CPAREN  reduce 35


state 101
	fc_parameter : arith_expression .  (40)
	arith_expression : arith_expression . PLUS arith_term  (71)
	arith_expression : arith_expression . MINUS arith_term  (72)

	PLUS  shift 124
	MINUS  shift 125
	CPAREN  reduce 40
	COMMA  reduce 40


state 102
	fc_parameter : string_expression .  (41)

	.  reduce 41


state 103
	fc_parameter : boolean_expression .  (42)

	.  reduce 42


state 104
	arith_expression : arith_term .  (73)
	arith_term : arith_term . MULT arith_factor  (74)
	arith_term : arith_term . DIV arith_factor  (75)
	arith_term : arith_term . MODULO arith_factor  (76)

	MULT  shift 126
	DIV  shift 127
	MODULO  shift 128
	CPAREN  reduce 73
	COMMA  reduce 73
	SCOLON  reduce 73
	PLUS  reduce 73
	MINUS  reduce 73


state 105
	arith_term : arith_factor .  (77)

	.  reduce 77


state 106
	arith_factor : SYMBOL .  (81)

	.  reduce 81


state 107
	var_assignment : SYMBOL ASSIGN expression . SCOLON  (31)

	SCOLON  shift 129
	.  error


state 108
	expression : arith_expression .  (44)
	arith_expression : arith_expression . PLUS arith_term  (71)
	arith_expression : arith_expression . MINUS arith_term  (72)

	PLUS  shift 124
	MINUS  shift 125
	SCOLON  reduce 44


state 109
	expression : string_expression .  (45)

	.  reduce 45


state 110
	expression : boolean_expression .  (43)

	.  reduce 43


state 111
	function_call : SYMBOL function_call_parameters SCOLON .  (32)

	.  reduce 32


state 112
	function_def_parameters : OPAREN fd_parameter_list CPAREN OPAREN fd_parameter_list CPAREN .  (12)

	.  reduce 12


state 113
	boolean_expression : NOT OPAREN . boolean_factor CPAREN  (61)
	boolean_expression : .  (57)

	OR  shift 77
	AND  shift 78
	NOT  shift 79
	EQ  shift 80
	NEQ  shift 81
	MORE  shift 82
	LESS  shift 83
	TRUE  shift 84
	FALSE  shift 85
	SYMBOL  shift 130
	STRING  shift 131
	CPAREN  reduce 57

	boolean_expression  goto 132
	boolean_function  goto 87
	boolean_factor  goto 133


state 114
	if_statement : IF OPAREN boolean_expression CPAREN . statement_group else_clause_list  (82)
	if_statement : IF OPAREN boolean_expression CPAREN . statement_group  (83)

	OCURLY  shift 27
	.  error

	statement_group  goto 134


state 115
	boolean_expression : boolean_function OPAREN . boolean_factor COMMA boolean_factor CPAREN  (60)
	boolean_expression : .  (57)

	OR  shift 77
	AND  shift 78
	NOT  shift 79
	EQ  shift 80
	NEQ  shift 81
	MORE  shift 82
	LESS  shift 83
	TRUE  shift 84
	FALSE  shift 85
	SYMBOL  shift 130
	STRING  shift 131
	COMMA  reduce 57

	boolean_expression  goto 132
	boolean_function  goto 87
	boolean_factor  goto 135


state 116
	while_statement : WHILE OPAREN boolean_expression CPAREN . loop_statement_group  (93)

	OCURLY  shift 136
	.  error

	loop_statement_group  goto 137


state 117
	for_statement : FOR OPAREN var_assignment SCOLON . boolean_expression SCOLON arith_expression CPAREN loop_statement_group  (94)
	boolean_expression : .  (57)

	OR  shift 77
	AND  shift 78
	NOT  shift 79
	EQ  shift 80
	NEQ  shift 81
	MORE  shift 82
	LESS  shift 83
	TRUE  shift 84
	FALSE  shift 85
	SCOLON  reduce 57

	boolean_expression  goto 138
	boolean_function  goto 87


state 118
	switch_statement : SWITCH OPAREN SYMBOL CPAREN . OCURLY case_clause_list CCURLY  (95)
	switch_statement : SWITCH OPAREN SYMBOL CPAREN . OCURLY case_clause_list CCURLY else_clause  (96)

	OCURLY  shift 139
	.  error


state 119
	arith_expression : arith_expression . PLUS arith_term  (71)
	arith_expression : arith_expression . MINUS arith_term  (72)
	arith_factor : OPAREN arith_expression . CPAREN  (79)

	CPAREN  shift 140
	PLUS  shift 124
	MINUS  shift 125
	.  error


state 120
	arith_factor : MINUS arith_factor .  (78)

	.  reduce 78

